# nanolm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cli.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: default.yaml  midtrain.yaml  ppo.yaml  pretrain.yaml  sft.yaml
docs/: DATA_PREPROCESSING.md  INFERENCE.md  MODEL_ARCHITECTURE.md  PROJECT_OVERVIEW.md  TRAINING_PIPELINE.md
eval/: __init__.py  compare.py  extract.py  reward.py
examples/: demo.py
model/: __init__.py  attention_masks.py  kv_cache.py  lm.py  model_config.py  rope.py  sparse_moe.py  vlm_model.py
nanolm/: __init__.py  api.py  device.py  server.py  utils.py
static/: app.js  index.html  style.css
tests/: test_config.py  test_dataset.py  test_device.py  test_model.py  test_utils.py
toolkit/: README.md  __init__.py  __main__.py  analyze.py  config.py  config_loader.py  download.py  encode.py  encode_ppo.py  encode_sft.py  file_dataset.py  merge.py  pipeline.py  preprocess.py  quality.py  shuffle.py  split.py  train.py  utils.py
train/: __init__.py  base_trainer.py  checkpoint.py  collate.py  dataset.py  dpo_trainer.py  ds_checkpoint.py  eval.py  generate_utils.py  grpo_trainer.py  log.py  loss.py  parallel.py  partition_utils.py  ppo_trainer.py  scheduler.py  sft_trainer.py  stats.py  tokenizer.py  tools.py  train_configs.py  trainer.py  utils.py
