[project]
name = "nanolm"
version = "0.1.1"
description = "从零构建大模型：从预训练到RLHF的完整实践"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "deepspeed>=0.12.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "modelscope>=1.10.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "bottle>=0.12.25",
    "paste>=3.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "orjson>=3.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.8.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[project.scripts]
nanolm = "cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["model*", "train*", "toolkit*", "eval*", "nanolm*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM105", # contextlib.suppress (less readable in training code)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["nanolm/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
